# moesif-gloo-extproc-plugin

./: .gitignore  .gitmodules  README.md
examples/extproc/: README.md  extproc-gloo-settings.yaml  extproc.yaml  publish_extproc_docker.sh
moesif-extproc/: Cargo.toml  Dockerfile
moesif-extproc/src/: config.rs  event.rs  grpc_service.rs  lib.rs  main.rs  root_context.rs  utils.rs
