[package]
name = "moesif_envoy_extproc_plugin"
version = "0.3.5"
edition = "2021"

[[bin]]
name = "moesif_envoy_extproc_plugin"
path = "src/main.rs"


[dependencies]
base64 = "0.21.2"
bytes = "1.0"
chrono = "0.4"
futures-util = "0.3"
h2 = { version = "0.3" }
env_logger = "0.10" 
log = "0.4"
prost = "0.11"
prost-types = "0.11"
regex = "1.5"
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1" }
tonic = "0.8"
tracing = { version = "0.1.16" }

[build-dependencies]
prost-build = "0.11"
tonic-build = "0.8"

[lib]
name = "envoy_ext_proc_proto"
doctest = false